--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "vite:build": "vite build"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.16.0",
     "@tanstack/react-query": "^5.50.1",
     "apexcharts": "^3.43.0",
     "axios": "^1.7.2",
@@ -39,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4"
